fix: richtext text alignmetn

--- a/themes/bella/styles/section.rich-text.scss
+++ b/themes/bella/styles/section.rich-text.scss
@@ -2,8 +2,9 @@
   [ui-section="rich-text"] {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: var(--text-heading-alignment-desktop);
     padding: attr(data-top-spacing px) 8% attr(data-bottom-spacing px) !important;
+    text-align: var(--text-heading-alignment-desktop);
     gap: var(--spacing-16);
 
     &[data-text-alignment="start"] {
